# Network-Monitoring-and-Automation-Tool

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: alert_action.py
netmon/: __init__.py  __main__.py  alerts.py  analyzer.py  cli.py  config.py  diagnostics.py  hub.py  logger.py  monitor.py  runner.py  state.py
netmon/dashboard/: server.py
netmon/dashboard/static/: app.js  index.html  style.css
tests/: test_alerts.py  test_analyzer.py
